--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>xj.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>sfg-pet-clinic</name>
     <description>Demo project for Spring Boot</description>
     <properties>
@@ -61,6 +61,6 @@
         <developerConnection>
             scm:git:git@github.com:Gin757306533/sfg-pet-clinic.git
         </developerConnection>
-      <tag>sfg-pet-clinic-0.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 </project>
