--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.banner.image.location=cat.png
 # Internationalization
 spring.messages.basename=messages/messages
+spring.profiles.active=springdatajpa
